# dns-wizard

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.superpowers/brainstorm/46886-1779233349/: .server-info
dns-wizard/src/: App.tsx
docs/superpowers/plans/: 2025-05-20-dns-wizard-redesign.md  2026-05-18-dns-wizard-mac-app-chunk1-2.md  (+7 more)
src/: App.tsx  toolMeta.ts  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dns-wizard/src-tauri/: Cargo.toml
src-tauri/dns-wizard/src-tauri/src/: dns_bench.rs  main.rs  profiles.rs  sys_config.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dns_bench.rs  dns_leak.rs  ip_norm.rs  latency_test.rs  lib.rs  main.rs  network_info.rs  ping.rs  port_scan.rs  profiles.rs  speed_test.rs  sys_config.rs  validate.rs  wifi_scan.rs
src/components/: AboutPanel.tsx  DnsPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExportButton.tsx  HealthPanel.tsx  LeakPanel.tsx  NetworkInfoPanel.tsx  OnboardingModal.tsx  PaneHeader.tsx  PingPanel.tsx  PortScanPanel.tsx  ProfileCard.tsx  ProgressDots.tsx  ResultTable.tsx  Sidebar.tsx  SimpleModeContext.tsx  SparklineChart.tsx  SpeedGauge.tsx  SpeedPanel.tsx  Step1_ChooseProfile.tsx  Step2_Benchmark.tsx  Step3_Results.tsx  ThemeContext.tsx  ToastProvider.tsx  Tooltip.tsx  WifiPanel.tsx
src/hooks/: useTestRunner.ts
src/styles/: dashboard.css  empty-state.css  index.css  network-info.css  ports.css  sparkline.css  toast.css  tokens.css  wifi.css
src/utils/: grades.ts  ip.ts
(+6 files in other folders)
