[package]
name = "dns-wizard"
version = "1.0.0"
edition = "2021"

[lib]
name = "dns_wizard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hickory-resolver = "0.24"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
regex = "1"
futures-util = "0.3"
