[package]
name = "dns-wizard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
trust-dns-resolver = "0.23"
chrono = "0.4"
sysinfo = "6.0"
# For OS-specific commands
once_cell = "1.18"
